@@ -11,6 +11,7 @@ v2.4.0 (2019.10.xx)
   - (Windows) Limit wait for IPv4 network connectivity during wakeup to one minute
   - Trigger a timer update when notified that the Kodi EPG "days to display" setting(s) have been changed
   - Remove "Startup discovery task delay" advanced setting
+  - Remove "Reset discovery database" PVR Client Specific setting
 
 v2.3.1 (2019.09.30)
   - Fix potential for a race condition in background task scheduler when synchronously executing a task
